# ai-commiter

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  hook.py  pyproject.toml  setup.py  test_commit_msg.txt
ai_commiter/: config.py  hook.py
