[project]
name = "ai_commiter"
version = "0.1.0"
description = "Create commit messages using AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openai"]

[project.scripts]
ai-commiter = "ai_commiter.hook:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_commiter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"